--- a/index.html
+++ b/index.html
@@ -1,10 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Yuvaraj Networking</title>
+  <meta charset="UTF-8">
+  <title>Yuvaraj | Freelance Network Support & IT Services</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Freelance network support and IT troubleshooting services. VPN issues, firewall problems, internet and Wi-Fi troubleshooting, remote IT support.">
+  <meta name="keywords" content="freelance network support, IT support freelancer, VPN troubleshooting, firewall issues, remote IT support, network engineer freelance">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2 {
+      color: #0a66c2;
+    }
+    .cta {
+      display: inline-block;
+      background: #0a66c2;
+      color: #fff;
+      padding: 12px 18px;
+      text-decoration: none;
+      margin: 10px 0;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+    .whatsapp {
+      background: #25D366;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #555;
+      text-align: center;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Website is LIVE 🚀</h1>
-  <p>Network Support & Freelance IT Services</p>
+
+  <h1>Network Support & IT Troubleshooting Services</h1>
+
+  <p><strong>Freelance Network & IT Support – Remote Assistance Available</strong></p>
+
+  <p>
+    I provide freelance network support and IT troubleshooting services for individuals,
+    remote workers, and small businesses. If you are facing VPN issues, firewall problems,
+    internet connectivity errors, or system network issues, I can help you fix them quickly.
+  </p>
+
+  <a class="cta whatsapp" href="https://wa.me/918095798079" target="_blank">
+    WhatsApp Me for Support
+  </a>
+
+  <h2>Services I Offer</h2>
+  <ul>
+    <li>Network Troubleshooting (LAN / WAN / Connectivity Issues)</li>
+    <li>VPN Setup, Configuration & Connectivity Fixes</li>
+    <li>Firewall Troubleshooting & Rule Issues</li>
+    <li>Internet & Wi-Fi Speed / Drop Issues</li>
+    <li>Remote IT Support & Issue Resolution</li>
+    <li>L1 / L2 Network Support Assistance</li>
+  </ul>
+
+  <h2>Case Studies</h2>
+  <ul>
+    <li>
+      <strong>VPN Connectivity Issue:</strong><br>
+      Client was unable to connect to office VPN remotely.
+      Identified firewall rule misconfiguration and fixed the issue within 30 minutes.
+    </li>
+    <li>
+      <strong>Internet & Wi-Fi Issue:</strong><br>
+      Frequent disconnections during work hours.
+      Diagnosed router and DNS issues, optimized settings, and stabilized the connection.
+    </li>
+    <li>
+      <strong>Firewall Access Problem:</strong><br>
+      Required ports were blocked causing application failure.
+      Updated firewall rules and verified secure access.
+    </li>
+  </ul>
+
+  <h2>Why Choose Me</h2>
+  <ul>
+    <li>Quick response and clear communication</li>
+    <li>Practical, real-world troubleshooting approach</li>
+    <li>Cost-effective freelance support</li>
+    <li>Remote assistance – no long-term contracts</li>
+  </ul>
+
+  <h2>Who Can Contact Me</h2>
+  <ul>
+    <li>Individuals working from home</li>
+    <li>Remote employees</li>
+    <li>Small businesses & startups</li>
+    <li>Anyone facing network or IT issues</li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p><strong>Email:</strong> your-email@gmail.com</p>
+  <p><strong>WhatsApp:</strong> <a href="https://wa.me/918095798079" target="_blank">+91 80957 98079</a></p>
+
+  <footer>
+    © 2026 Yuvaraj | Freelance Network & IT Support
+  </footer>
+
 </body>
 </html>
