--- a/index.html
+++ b/index.html
@@ -5,115 +5,198 @@
   <title>Yuvaraj | Freelance Network Support & IT Services</title>
 
   <!-- SEO -->
-  <meta name="description" content="Freelance network support and IT troubleshooting services. VPN issues, firewall problems, internet and Wi-Fi troubleshooting, remote IT support.">
-  <meta name="keywords" content="freelance network support, IT support freelancer, VPN troubleshooting, firewall issues, remote IT support, network engineer freelance">
+  <meta name="description" content="Freelance Network Support & IT Troubleshooting. VPN, Firewall, WiFi, Internet & Remote IT Support for individuals and businesses.">
+  <meta name="keywords" content="freelance network support, VPN troubleshooting, firewall issues, IT support freelancer, remote IT support">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      line-height: 1.6;
+      margin: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f5f7fa;
       color: #222;
+      line-height: 1.6;
     }
-    h1, h2 {
-      color: #0a66c2;
-    }
-    .cta {
-      display: inline-block;
-      background: #0a66c2;
+
+    header {
+      background: linear-gradient(135deg, #0a66c2, #004182);
       color: #fff;
-      padding: 12px 18px;
-      text-decoration: none;
-      margin: 10px 0;
-      border-radius: 4px;
-      font-weight: bold;
-    }
-    .whatsapp {
-      background: #25D366;
-    }
-    ul {
-      margin-left: 20px;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #555;
+      padding: 60px 20px;
       text-align: center;
+    }
+
+    header h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 18px;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 14px 22px;
+      background: #25D366;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    section {
+      max-width: 1100px;
+      margin: auto;
+      padding: 50px 20px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #0a66c2;
+      margin-bottom: 30px;
+      font-size: 28px;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #004182;
+    }
+
+    .why {
+      background: #fff;
+      border-radius: 10px;
+      padding: 30px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+    }
+
+    .why ul {
+      padding-left: 20px;
+    }
+
+    footer {
+      background: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 30px 15px;
+      font-size: 14px;
+    }
+
+    footer a {
+      color: #25D366;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>Network Support & IT Troubleshooting Services</h1>
-
-  <p><strong>Freelance Network & IT Support – Remote Assistance Available</strong></p>
-
+<header>
+  <h1>Freelance Network Support & IT Troubleshooting</h1>
   <p>
-    I provide freelance network support and IT troubleshooting services for individuals,
-    remote workers, and small businesses. If you are facing VPN issues, firewall problems,
-    internet connectivity errors, or system network issues, I can help you fix them quickly.
+    Having VPN issues, firewall problems, Wi-Fi drops, or internet connectivity errors?
+    I provide fast, reliable remote network & IT support for individuals and small businesses.
   </p>
 
-  <a class="cta whatsapp" href="https://wa.me/918095798079" target="_blank">
-    WhatsApp Me for Support
+  <a class="btn" href="https://wa.me/918095798079" target="_blank">
+    Chat on WhatsApp – Get Help Now
   </a>
+</header>
 
-  <h2>Services I Offer</h2>
-  <ul>
-    <li>Network Troubleshooting (LAN / WAN / Connectivity Issues)</li>
-    <li>VPN Setup, Configuration & Connectivity Fixes</li>
-    <li>Firewall Troubleshooting & Rule Issues</li>
-    <li>Internet & Wi-Fi Speed / Drop Issues</li>
-    <li>Remote IT Support & Issue Resolution</li>
-    <li>L1 / L2 Network Support Assistance</li>
-  </ul>
+<section>
+  <h2>Services I Provide</h2>
 
-  <h2>Case Studies</h2>
-  <ul>
-    <li>
-      <strong>VPN Connectivity Issue:</strong><br>
-      Client was unable to connect to office VPN remotely.
-      Identified firewall rule misconfiguration and fixed the issue within 30 minutes.
-    </li>
-    <li>
-      <strong>Internet & Wi-Fi Issue:</strong><br>
-      Frequent disconnections during work hours.
-      Diagnosed router and DNS issues, optimized settings, and stabilized the connection.
-    </li>
-    <li>
-      <strong>Firewall Access Problem:</strong><br>
-      Required ports were blocked causing application failure.
-      Updated firewall rules and verified secure access.
-    </li>
-  </ul>
+  <div class="cards">
+    <div class="card">
+      <h3>Network Troubleshooting</h3>
+      <p>Diagnosing and fixing LAN, WAN, DNS, and general connectivity issues.</p>
+    </div>
 
-  <h2>Why Choose Me</h2>
-  <ul>
-    <li>Quick response and clear communication</li>
-    <li>Practical, real-world troubleshooting approach</li>
-    <li>Cost-effective freelance support</li>
-    <li>Remote assistance – no long-term contracts</li>
-  </ul>
+    <div class="card">
+      <h3>VPN Support</h3>
+      <p>VPN setup, configuration, and fixing remote access connectivity problems.</p>
+    </div>
 
-  <h2>Who Can Contact Me</h2>
-  <ul>
-    <li>Individuals working from home</li>
-    <li>Remote employees</li>
-    <li>Small businesses & startups</li>
-    <li>Anyone facing network or IT issues</li>
-  </ul>
+    <div class="card">
+      <h3>Firewall Issues</h3>
+      <p>Troubleshooting firewall rules, blocked ports, and access problems.</p>
+    </div>
 
-  <h2>Contact</h2>
-  <p><strong>Email:</strong> your-email@gmail.com</p>
-  <p><strong>WhatsApp:</strong> <a href="https://wa.me/918095798079" target="_blank">+91 80957 98079</a></p>
+    <div class="card">
+      <h3>Internet & Wi-Fi Problems</h3>
+      <p>Fixing slow speed, frequent disconnections, and unstable Wi-Fi networks.</p>
+    </div>
 
-  <footer>
-    © 2026 Yuvaraj | Freelance Network & IT Support
-  </footer>
+    <div class="card">
+      <h3>Remote IT Support</h3>
+      <p>On-demand IT assistance without long-term contracts.</p>
+    </div>
+
+    <div class="card">
+      <h3>L1 / L2 Network Support</h3>
+      <p>Professional support experience applied to real-world client problems.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Real Work Examples</h2>
+
+  <div class="cards">
+    <div class="card">
+      <h3>VPN Not Connecting</h3>
+      <p>Identified firewall rule conflict and restored VPN access within 30 minutes.</p>
+    </div>
+
+    <div class="card">
+      <h3>Wi-Fi Frequent Drops</h3>
+      <p>Optimized router settings and DNS configuration to stabilize connectivity.</p>
+    </div>
+
+    <div class="card">
+      <h3>Firewall Blocking Application</h3>
+      <p>Updated firewall rules securely to allow required traffic.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Why Clients Choose Me</h2>
+
+  <div class="why">
+    <ul>
+      <li>Fast response and clear communication</li>
+      <li>Real troubleshooting experience (not theory)</li>
+      <li>Remote support – quick and cost-effective</li>
+      <li>No long-term contracts or hidden costs</li>
+    </ul>
+  </div>
+</section>
+
+<footer>
+  <p>Need quick help with a network or IT issue?</p>
+  <p>
+    👉 <a href="https://wa.me/918095798079" target="_blank">WhatsApp: +91 80957 98079</a>
+  </p>
+  <p>© 2026 Yuvaraj | Freelance Network & IT Support</p>
+</footer>
 
 </body>
 </html>
