--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Yuvaraj | Freelance Network Support & IT Services</title>
 
   <!-- SEO -->
-  <meta name="description" content="Freelance Network Support & IT Troubleshooting. VPN, Firewall, WiFi, Internet & Remote IT Support for individuals and businesses.">
+  <meta name="description" content="Freelance Network Support & IT Troubleshooting Services. VPN, Firewall, WiFi, Internet & Remote IT Support.">
   <meta name="keywords" content="freelance network support, VPN troubleshooting, firewall issues, IT support freelancer, remote IT support">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,33 +13,38 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: #f5f7fa;
+      background: #f4f6f9;
       color: #222;
       line-height: 1.6;
     }
 
+    /* HERO */
     header {
-      background: linear-gradient(135deg, #0a66c2, #004182);
+      background:
+        linear-gradient(rgba(0, 64, 130, 0.85), rgba(0, 64, 130, 0.85)),
+        url("https://images.unsplash.com/photo-1558494949-ef010cbdcc31");
+      background-size: cover;
+      background-position: center;
       color: #fff;
-      padding: 60px 20px;
+      padding: 90px 20px;
       text-align: center;
     }
 
     header h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
+      font-size: 40px;
+      margin-bottom: 12px;
     }
 
     header p {
       font-size: 18px;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
     }
 
     .btn {
       display: inline-block;
-      margin-top: 20px;
-      padding: 14px 22px;
+      margin-top: 30px;
+      padding: 15px 26px;
       background: #25D366;
       color: #fff;
       text-decoration: none;
@@ -51,51 +56,61 @@
     section {
       max-width: 1100px;
       margin: auto;
-      padding: 50px 20px;
+      padding: 60px 20px;
     }
 
     h2 {
       text-align: center;
-      color: #0a66c2;
-      margin-bottom: 30px;
-      font-size: 28px;
+      color: #004182;
+      font-size: 30px;
+      margin-bottom: 40px;
     }
 
+    /* CARDS */
     .cards {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
     }
 
     .card {
       background: #fff;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      text-align: center;
+    }
+
+    .card img {
+      width: 60px;
+      margin-bottom: 15px;
     }
 
     .card h3 {
-      margin-top: 0;
       color: #004182;
+      margin-bottom: 10px;
     }
 
+    /* WHY SECTION */
     .why {
       background: #fff;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      border-radius: 12px;
+      padding: 40px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
 
     .why ul {
       padding-left: 20px;
+      font-size: 17px;
     }
 
+    /* FOOTER */
     footer {
-      background: #111;
+      background: #0b0b0b;
       color: #ccc;
       text-align: center;
-      padding: 30px 15px;
-      font-size: 14px;
+      padding: 40px 20px;
+      font-size: 15px;
     }
 
     footer a {
@@ -111,12 +126,12 @@
 <header>
   <h1>Freelance Network Support & IT Troubleshooting</h1>
   <p>
-    Having VPN issues, firewall problems, Wi-Fi drops, or internet connectivity errors?
+    Facing VPN issues, firewall problems, Wi-Fi drops, or internet connectivity errors?
     I provide fast, reliable remote network & IT support for individuals and small businesses.
   </p>
 
   <a class="btn" href="https://wa.me/918095798079" target="_blank">
-    Chat on WhatsApp – Get Help Now
+    WhatsApp Me – Get Instant Support
   </a>
 </header>
 
@@ -125,33 +140,39 @@
 
   <div class="cards">
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/906/906334.png">
       <h3>Network Troubleshooting</h3>
-      <p>Diagnosing and fixing LAN, WAN, DNS, and general connectivity issues.</p>
+      <p>LAN, WAN, DNS and connectivity issue diagnosis and resolution.</p>
     </div>
 
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/483/483361.png">
       <h3>VPN Support</h3>
-      <p>VPN setup, configuration, and fixing remote access connectivity problems.</p>
+      <p>VPN setup, configuration and fixing remote access issues.</p>
     </div>
 
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png">
       <h3>Firewall Issues</h3>
-      <p>Troubleshooting firewall rules, blocked ports, and access problems.</p>
+      <p>Troubleshooting firewall rules, blocked ports and access errors.</p>
     </div>
 
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/1041/1041916.png">
       <h3>Internet & Wi-Fi Problems</h3>
-      <p>Fixing slow speed, frequent disconnections, and unstable Wi-Fi networks.</p>
+      <p>Slow speed, frequent disconnections and unstable Wi-Fi fixes.</p>
     </div>
 
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/2942/2942813.png">
       <h3>Remote IT Support</h3>
-      <p>On-demand IT assistance without long-term contracts.</p>
+      <p>On-demand IT support without long-term contracts.</p>
     </div>
 
     <div class="card">
+      <img src="https://cdn-icons-png.flaticon.com/512/1995/1995574.png">
       <h3>L1 / L2 Network Support</h3>
-      <p>Professional support experience applied to real-world client problems.</p>
+      <p>Professional troubleshooting experience applied to real issues.</p>
     </div>
   </div>
 </section>
@@ -162,12 +183,12 @@
   <div class="cards">
     <div class="card">
       <h3>VPN Not Connecting</h3>
-      <p>Identified firewall rule conflict and restored VPN access within 30 minutes.</p>
+      <p>Identified firewall conflict and restored VPN access within 30 minutes.</p>
     </div>
 
     <div class="card">
-      <h3>Wi-Fi Frequent Drops</h3>
-      <p>Optimized router settings and DNS configuration to stabilize connectivity.</p>
+      <h3>Wi-Fi Disconnecting</h3>
+      <p>Optimized router and DNS settings to stabilize connectivity.</p>
     </div>
 
     <div class="card">
@@ -182,10 +203,11 @@
 
   <div class="why">
     <ul>
-      <li>Fast response and clear communication</li>
+      <li>Fast response & clear communication</li>
       <li>Real troubleshooting experience (not theory)</li>
       <li>Remote support – quick and cost-effective</li>
-      <li>No long-term contracts or hidden costs</li>
+      <li>No long-term contracts</li>
+      <li>Client-focused problem solving</li>
     </ul>
   </div>
 </section>
@@ -193,7 +215,9 @@
 <footer>
   <p>Need quick help with a network or IT issue?</p>
   <p>
-    👉 <a href="https://wa.me/918095798079" target="_blank">WhatsApp: +91 80957 98079</a>
+    👉 <a href="https://wa.me/918095798079" target="_blank">
+    WhatsApp: +91 80957 98079
+    </a>
   </p>
   <p>© 2026 Yuvaraj | Freelance Network & IT Support</p>
 </footer>
